# optimisation_graph

./: .gitignore
TP0/: .gitignore  graph.hpp  main.cpp
TP1/: .gitignore  files.hpp  profile.sh  timeall.sh
TP1/input/: jupiter-40000.instance.json  protein-80000.instance.json  us-night-20000.instance.json  world-10000.instance.json
TP1/public_cpp/: main.cpp
TP1/public_py/: main.py
TP2/: Solver.hpp  build.sh  main.cpp  testind.py
TP2/instances/: 00030_000109_random_udg.ind  00100_001156_qatar_udg.ind  00300_001484_euronight_8nn.ind  01000_002980_greece_del.ind  03000_010884_paris_6nn.ind  10000_024317_italy_4nn.ind  20000_107456_jupiter_9nn.ind  30000_089977_usnight_del.ind  40000_119960_protein_del.ind
TP2/public_cpp/: .gitignore  profile.sh  timeall.sh
TP2/public_py/: timeall.sh
TP3/: .gitignore  Solver.hpp  build.sh
TP3/dom/: build.sh  main.cpp  solver.hpp
TP3/ind/: Graph.hpp  build.sh  main.cpp  solver.hpp  tools.hpp
TP4/: .gitignore  Graph.hpp  Solver.hpp  SubSolver.hpp  build.sh  main.cpp  testind.py
TP4/dom/: CMakeLists.txt  FindCPLEX.cmake  build.sh  graph.hpp  main.cpp  testdom.py
TP4/ind/: build.sh
